# VoyagerEF-Android

./: AARCH64_JIT_NOTES.md  BLOOM_WHITE_NOTES.md  CREDITS.md  ENV_TEXCOORD_NOTES.md  PIPELINE_PREWARM.md  README-ANDROID.md  README.md  RENDER_THREAD_PLAN.md  UI_STRING_ALIGNMENT.md  VULKAN_PORT_PLAN.md  VULKAN_PORT_WORKLIST.md  VULKAN_RENDERER.md  android_defaults.cfg  build-all.sh  build-native.sh  build-ui-qvm.sh  deploy-to-phone.sh
EFAndroid/app/: build.gradle
EFAndroid/app/jni/efcode/client/: cl_cgame.c  cl_cin.c  cl_keys.c  cl_main.c  cl_scrn.c  cl_ui.c  snd_main.c
EFAndroid/app/jni/efcode/qcommon/: vm.c
EFAndroid/app/jni/efcode/renderercommon/: tr_public.h
EFAndroid/app/jni/efcode/renderergl1/: tr_backend.c  tr_init.c
EFAndroid/app/jni/efcode/renderergl2/: tr_backend.c  tr_bsp.c  tr_extensions.c  tr_glsl.c  tr_init.c  tr_local.h  tr_scene.c  tr_shade.c  tr_shader.c  tr_surface.c  tr_vbo.c
EFAndroid/app/jni/efcode/renderergl2/glsl/: depthblur_fp.c  generic_vp.c  lightall_fp.c  lightall_vp.c  shadowmask_fp.c  ssao_fp.c
EFAndroid/app/jni/efcode/renderervk/: tr_backend.c  tr_cmds.c  tr_image.c  tr_init.c  tr_light.c  tr_local.h  tr_model.c  tr_shade_calc.c  tr_shader.c  tr_surface.c  vk.c  vk.h
EFAndroid/app/jni/efcode/server/: sv_main.c
EFAndroid/app/jni/src/: CMakeLists.txt
EFAndroid/app/src/main/assets/baseEF/: android_defaults.cfg  autoexec.cfg  zpak-android.pk3
EFAndroid/app/src/main/java/com/voyager/ef/: EFActivity.java  ImportActivity.java
EFAndroid/app/src/main/java/org/libsdl/app/: SDLActivity.java
EFAndroid/app/src/main/res/values/: strings.xml
